documentacion/obtenida/ARINC 429/driver and software/PC629-1/API/P61W32.H

typedef void VOID;
typedef void * LPVOID;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef int HCARD;

P61W32API VOID __stdcall DRV629_PortInsB(USHORT addrval,LPVOID dataptr,USHORT cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PortInsW(USHORT addrval,LPVOID dataptr,USHORT cntval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_PortInW(USHORT addrval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_PortLodsB(USHORT addrval,ULONG cntval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_PortLodsW(USHORT addrval,ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PortOutB(USHORT addrval,USHORT dataval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PortOutsB(USHORT addrval,LPVOID dataptr,USHORT cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PortOutsW(USHORT addrval,LPVOID dataptr,USHORT cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PortOutW(USHORT addrval,USHORT dataval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PortStepB(USHORT addrval,USHORT dataval,ULONG cntval,USHORT stepval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PortStosB(USHORT addrval,USHORT dataval,ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PortStosBR(USHORT addrval,ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PortStosW(USHORT addrval,USHORT dataval,ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromFill(ULONG addrval,USHORT value,ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromFillR(ULONG addrval,ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromFillStep(ULONG addrval,USHORT value,ULONG cntval,USHORT stepval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromIns(ULONG addrval,LPVOID dataptr,USHORT cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromLoc(ULONG addrval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_PromLod(ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromOffsetFill(USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromOuts(ULONG addrval,LPVOID dataptr,USHORT cntval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_PromRdB(ULONG addrval,HCARD handleval);

P61W32API ULONG __stdcall DRV629_PromRdL(ULONG addrval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_PromRdW(ULONG addrval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromStep(USHORT value,ULONG cntval,USHORT stepval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromSto(USHORT value,ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromStoR(ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromWrB(ULONG addrval,USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromWrL(ULONG addrval,ULONG value,HCARD handleval);

P61W32API VOID __stdcall DRV629_PromWrW(ULONG addrval,USHORT value,HCARD handleval);

P61W32API ULONG __stdcall DRV629_RamBlkAddr(USHORT blknum,HCARD handleval);

P61W32API USHORT __stdcall DRV629_RamBlkCnt(USHORT blkcnt,HCARD handleval);

P61W32API USHORT __stdcall DRV629_RamBlkCount(HCARD handleval);

P61W32API USHORT __stdcall DRV629_RamBlkCurr(HCARD handleval);

P61W32API VOID __stdcall DRV629_RamBlkFill(USHORT blkval,ULONG startaddr,ULONG count,USHORT value,HCARD handleval);

P61W32API ULONG __stdcall DRV629_RamBlkSize(HCARD handleval);

P61W32API VOID __stdcall DRV629_RamFill(ULONG addrval,USHORT value,ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_RamFillR(ULONG addrval,ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_RamLods(ULONG addrval,LPBYTE dataptr,ULONG cntval,HCARD handleval);

P61W32API ULONG __stdcall DRV629_RamPageCrc(USHORT pageval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_RamRdB(ULONG addrval,HCARD handleval);

P61W32API ULONG __stdcall DRV629_RamRdL(ULONG addrval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_RamRdW(ULONG addrval,HCARD handleval);

P61W32API VOID __stdcall DRV629_RamStos(ULONG addrval,LPBYTE dataptr,ULONG cntval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_RamSwitch(USHORT blknum,HCARD handleval);

P61W32API VOID __stdcall DRV629_RamWrB(ULONG addrval,USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_RamWrL(ULONG addrval,ULONG value,HCARD handleval);

P61W32API VOID __stdcall DRV629_RamWrW(ULONG addrval,USHORT value,HCARD handleval);

P61W32API USHORT __stdcall DRV629_Rand(VOID);

P61W32API VOID __stdcall DRV629_RegInsProm(LPVOID dataptr,USHORT cntval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegLodPort(ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegOutsProm(LPVOID dataptr,USHORT cntval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegRdCtrl(HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegRdDir(USHORT regnum,HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegRdErr(HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegRdInd(USHORT regnum,HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegRdIntVect(HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegRdLast(HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegRdMemCfg(HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegRdMemPage(HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegRdPort(HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegRdPortSel(HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegRdProm(ULONG cntval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_RegRdStatus(HCARD handleval);

P61W32API VOID __stdcall DRV629_RegStepPort(USHORT value,ULONG cntval,USHORT stepval,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegStepProm(USHORT value,ULONG cntval,USHORT stepval,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegStoPort(USHORT value,ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegStoRPort(ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrCID(USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrClrInt(HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrCtrl(USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrDir(USHORT regnum,USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrInd(USHORT regnum,USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrMemCfg(USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrMemPage(USHORT value,HCARD handleval);